# re-ink

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md
.github/workflows/: claude-code-review.yml  deploy.yml  test.yml
backend/: .env.bak  .env.bak3  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  run_debug.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_drop_redundant_pk_indexes.py  0003_contracts_tenant_isolation.py  0004_parties_tenant_isolation.py  0005_extraction_jobs_isolation.py  0006_contract_parties_isolation.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  contract_review.py  guided_intake.py  utils.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: __init__.py  agents.py  contracts.py  documents.py  onboarding.py  parties.py  review.py  system.py  widgets.py
backend/app/core/: __init__.py  auth.py  config.py  tenancy.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  contract.py  extraction_job.py  party.py
backend/app/schemas/: __init__.py  agent.py  contract.py  document.py  extraction_schema.py  party.py
backend/app/services/: __init__.py  agent_service.py  anthropic_extraction_service.py  document_service.py  extraction_store.py  free_extraction_service.py  landingai_service.py  party_matching.py
backend/scripts/: migrate_party_role_per_contract.sql  seed_parties.py
backend/tests/: conftest.py  test_association_isolation.py  test_auth.py  test_extraction_isolation.py  test_harness.py  test_mock_agents.py  test_onboarding.py  test_party_isolation.py  test_party_matching.py  test_source_grounding.py  test_tenant_isolation.py  test_widgets.py
docs/agents/: domain.md  issue-tracker.md
frontend/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: AccountPanel.tsx  AuthGuards.tsx  DocumentPreview.tsx  ExtractionStatus.tsx  FileUpload.tsx  Layout.tsx  ReviewForm.tsx  SecondarySidebar.tsx
frontend/src/pages/: ContractDetailPage.tsx  ContractsPage.tsx  Dashboard.tsx  HomePage.tsx  PartiesPage.tsx  PartyDetailPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: App.css
frontend/src/types/: index.ts
sample_documents/: 100% Quota Share Reinsurance Agreement.pdf.example  25sra.pdf.example  lemonade_metromile_ri_qs_contract.pdf.example
