[project]
name = "re-ink"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # Core Framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    # Database
    "sqlalchemy==2.0.44",
    "alembic==1.17.1",
    "psycopg[binary]==3.2.12",
    # Validation
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "email-validator==2.3.0",
    # Document Processing
    "python-docx==1.1.0",
    "PyPDF2==3.0.1",
    "pypdf==3.17.1",
    # HTTP Client
    "httpx>=0.27.0",
    "aiofiles==23.2.1",
    # LandingAI ADE SDK (required only when EXTRACTION_BACKEND=landingai)
    "landingai-ade==0.20.3",
    # Free Extraction (required only when EXTRACTION_BACKEND=free with provider=ollama)
    "langchain-ollama>=0.2.0",
    # Anthropic SDK (required only when using anthropic extraction backend)
    "anthropic>=0.39.0",
    # Free Parse Backend: GLM-OCR (required only when FREE_PARSE_BACKEND=glm-ocr)
    "pymupdf>=1.24.0",
    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    # CORS
    "fastapi-cors==0.0.6",
    # Debugging
    "debugpy==1.8.0",
    "langgraph>=1.1.6",
    "langchain-openai>=1.1.12",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
