[project]
name = "re-ink-backend"
version = "0.1.0"
description = "re-ink reinsurance contract management backend"
requires-python = ">=3.13"
dependencies = [
    # Framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    # Database
    "sqlalchemy==2.0.44",
    "alembic==1.17.1",
    "psycopg[binary]==3.2.12",
    # Validation
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "email-validator==2.3.0",
    # Document processing
    "python-docx==1.1.0",
    "PyPDF2==3.0.1",
    "pypdf==3.17.1",
    # HTTP / async IO
    "httpx>=0.27.0",
    "aiofiles==23.2.1",
    # LandingAI ADE SDK
    "landingai-ade==0.20.3",
    # LangChain / LangGraph agents
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "langgraph",
    # Auth & security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    # CORS
    "fastapi-cors==0.0.6",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "debugpy==1.8.0",
]
