[project]
name = "re-ink-backend"
version = "0.1.0"
description = "re-ink reinsurance contract management backend"
requires-python = ">=3.13"
dependencies = [
    # Framework
    "fastapi[standard]>=0.111.0",
    "python-multipart>=0.0.7",
    # Database
    "sqlalchemy>=2.0.44",
    "alembic>=1.17.1",
    "psycopg[binary]==3.2.12",
    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.3.0",
    # Document processing
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.1",
    "pypdf>=3.17.1",
    # HTTP / async IO
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    # LandingAI ADE SDK
    "landingai-ade>=0.20.3",
    # LangChain / LangGraph agents
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "langgraph",
    # Fuzzy matching for party deduplication
    "rapidfuzz>=3.0.0",
    # Auth & security
    # python-jose validates WorkOS access tokens (RS256 via JWKS).
    "python-jose[cryptography]==3.3.0",
    "python-dotenv>=1.0.0",
    # CORS
    "fastapi-cors>=0.0.6",
    "workos>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "debugpy==1.8.0",
]

[tool.fastapi]
entrypoint = "app.main:app"
